changed the server side and added to the order class